<resources>
    <string name="app_name">My Application</string>
    <string name="usuario">Usuario</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmarContrasena">Confirmar contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="suscribirse">Suscribirse</string>
    <string name="suscribete">Suscríbete</string>
    <string name="descripcionLogo">Logo de aplicación</string>
    <string name="mensajeSuscripcion"><b>¡Hola!</b>\n Regístrate para empezar a <b>disfrutar</b></string>
    <string name="opcionAnadir">Añadir a lista de reproducción</string>
    <string name="opcionEliminar">Eliminar de lista de reproducción</string>
    <string name="nombreLista">Nombre de la lista</string>
    <string name="btnReproducir">REPRODUCIR</string>
    <string name="navInicio">Inicio</string>
    <string name="nav_busqueda">Búsqueda</string>
    <string name="nav_subirMusica">Subir música</string>
    <string name="nav_reproductor">Reproductor</string>
    <string name="barraBusqueda">Artista, canción, álbum…</string>
    <string name="resultadoAlbum"><b>Álbumes</b></string>
    <string name="resultadoCancion"><b>Canciones</b></string>
    <string name="resultadoListadereproduccion"><b>Listas de reproducción</b></string>
    <string name="resultadoArtista"><b>Artistas</b></string>
    <string name="inicioListadereproduccion">Tus listas de reproducción</string>
    <string name="inicioRadio">Radio por género</string>
    <string name="bienvenida"><b>Bienvenido</b></string>
    <string name="cancionSelect">Subir Canción</string>
    <string name="interno">Selecciona Archivo(almacenamiento interno)</string>
    <string name="btn_subirCancion">SUBIR CANCION</string>
    <string name="hint_autor">Nombre del Autor</string>
    <string name="hint_album">Nombre del Album</string>
    <string name="hint_cancion">Nombre de Canción</string>
    <string name="hint_genero">Genero</string>

    <string name="url">http://25.85.202.200:5004/api/cuenta</string>
    <string name="url">http://25.85.202.200:5004/api</string>
    <string name="mensajeAlternoRealizarSuscripcion">Hay datos incompletos o inválidos, favor de revisar</string>
    <string name="mensajeAlternoIniciarSesion">Usuario o contraseña incorrecta</string>
</resources>
