<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".Iniciar_sesion">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:srcCompat="@drawable/live_streaming"
            android:id="@+id/logo"
            android:contentDescription="@string/descripcionLogo"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:id="@+id/tilUsuario">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/usuario"
                android:inputType="text"
                android:textColor="@color/letras"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilContrasena"
            android:layout_margin="40dp"
            app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:textColor="@color/letras"
        />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
            android:text="@string/entrar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnEntrar"
            android:textAllCaps="false"
            android:backgroundTint="@color/morado"/>

    <Button
            android:text="@string/suscribirse"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSuscribirse"
            android:textAllCaps="false"
            android:layout_margin="20dp"
            style="?attr/materialButtonOutlinedStyle"
            tools:ignore="PrivateResource"
            app:strokeColor="@color/verde"/>

</LinearLayout>