<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".Realizar_suscripcion">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMensajeSuscripcion"
            android:gravity="center"
            android:text="@string/mensajeSuscripcion"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/letras"
            android:layout_margin="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:id="@+id/tilNombreUsuario">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/nombreUsuario"
                android:inputType="text"
                android:textColor="@color/letras"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilContrasena"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:textColor="@color/letras"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilConfirmarContrasena"
            android:layout_margin="40dp"
            app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/confirmarContrasena"
                android:inputType="textPassword"
                android:textColor="@color/letras"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/suscribete"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSuscribete"
            android:textAllCaps="false"
            android:layout_margin="20dp"/>

</RelativeLayout>