<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Buscar">

    <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:defaultQueryHint="@string/barraBusqueda"
            app:queryHint="@string/barraBusqueda"
            android:iconifiedByDefault="false"
            android:background="@color/fondo2"
            app:queryBackground="@android:color/transparent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tvCancion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultadoCancion"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/morado"
                android:layout_margin="5dp"
                android:visibility="gone"
                tools:ignore="MissingConstraints"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/listaCancion"
                android:dividerHeight="2dp"
                android:visibility="gone"
                tools:ignore="MissingConstraints"
                app:layout_constraintTop_toBottomOf="@id/tvCancion"/>

            <TextView
                android:id="@+id/tvAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultadoAlbum"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/morado"
                android:layout_margin="5dp"
                android:visibility="gone"
                tools:ignore="MissingConstraints"
                app:layout_constraintTop_toBottomOf="@id/listaCancion"/>
            <GridView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numColumns="3"
                android:verticalSpacing="20dp"
                android:columnWidth="100dp"
                android:gravity="center"
                android:stretchMode="spacingWidth"
                android:id="@+id/listaAlbum"
                android:visibility="gone"
                tools:ignore="MissingConstraints"
                app:layout_constraintTop_toBottomOf="@id/tvAlbum"/>

            <TextView
                android:id="@+id/tvArtista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultadoArtista"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/morado"
                android:layout_margin="5dp"
                android:visibility="gone"
                tools:ignore="MissingConstraints"
                app:layout_constraintTop_toBottomOf="@id/listaAlbum"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/listaArtista"
                android:dividerHeight="2dp"
                android:visibility="gone"
                tools:ignore="MissingConstraints"
                app:layout_constraintTop_toBottomOf="@id/tvArtista"/>

            <TextView
                android:id="@+id/tvListaReproduccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultadoListadereproduccion"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/morado"
                android:layout_margin="5dp"
                android:visibility="gone"
                tools:ignore="MissingConstraints"
                app:layout_constraintTop_toBottomOf="@id/listaArtista"/>
            <GridView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numColumns="3"
                android:verticalSpacing="20dp"
                android:columnWidth="100dp"
                android:gravity="center"
                android:stretchMode="spacingWidth"
                android:id="@+id/listaListaReproduccion"
                android:visibility="gone"
                tools:ignore="MissingConstraints"
                app:layout_constraintTop_toBottomOf="@id/tvListaReproduccion"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>